It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Wed, Feb 26, 2008
---------------------------------------------------------------------
- Github commits are up on Twitter at http://twitter.com/fatfreecrm
- More refactoring to simplify handling of inline forms.

Wed, Feb 25, 2008
---------------------------------------------------------------------
- Refactored tasks, added ability to create related tasks (Campaigns only so far).

Tue, Feb 24, 2008
---------------------------------------------------------------------
- Implemented adding opportunities from the [Campaign] landing page.
- Implemented adding opportunities from [Contact] landing page.
- Implemented adding contacts from [Opportunity] landing page.
- Three months anniversary ;-).

Mon, Feb 23, 2008
---------------------------------------------------------------------
- Implemented adding leads from the [Campaign] landing page.
- Implemented adding contacts from the [Account] landing page.
- Implemented adding opportunities from the [Account] landing page.
- Updated README file.

Sun, Feb 22, 2008
---------------------------------------------------------------------
- Adding parent object support for inline forms.

Fri, Feb 20, 2008
---------------------------------------------------------------------
- Major refactoring to support inline form embedding throughout the system.

Thu, Feb 19, 2008
---------------------------------------------------------------------
- Simplified storing expand/collapse state for form sections.
- Started refactoring to support inline form embedding.

Wed, Feb 18, 2008
---------------------------------------------------------------------
- Converted [Create...] forms to remote to be able to reuse them inline.
- Refactored javascript and stylesheet includes for popup calendar control.