@@ -51,6 +51,9 @@ a
 
 // Smaller fonts.
 //------------------------------------------------------------------------------
+abbr
+  :font-size 9px
+
 small
   :font-size 10px 
 
