@@ -8,6 +8,7 @@ Wed, Feb 26, 2008
 ---------------------------------------------------------------------
 - Github commits are up on Twitter at http://twitter.com/fatfreecrm
 - More refactoring to simplify handling of inline forms.
+- Implemented adding related tasks for Leads.
 
 Wed, Feb 25, 2008
 ---------------------------------------------------------------------
